# orion-desktop

./: .gitignore  README.md  angular.json  jest.config.js  latest.json  package-lock.json  package.json  setup-jest.ts  tsconfig.json  tsconfig.spec.json
.github/workflows/: release.yml
src/: index.html  main.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: config.rs  config_global.rs  lib.rs  main.rs  markdownfiles.rs  workspace.rs
src-tauri/src/assets/Markdown/help/: help_en.md
src/api/: api.config.ts  api.service.ts
src/api/v1/: endpoints.json  endpoints.ts
src/app/: app.component.html  app.component.ts  app.module.ts  app.routes.ts
src/assets/localization/: languages.json
src/assets/windows/: windows.json
src/environments/: environment.ts
src/interfaces/: config.interface.ts  context-menu-item.interface.ts  preset.interface.ts  project-types.inerface.ts  select.interface.ts  settings.interface.ts  version.interface.ts
src/interfaces/components/: tab.interface.ts
src/interfaces/data/: profile.interface.ts  update-status.interface.ts
src/services/: configService.ts  dialog.service.ts  language.service.ts  network.service.ts  presets.ts  settings.service.ts  tab.service.ts  translate.service.ts  tts.service.ts  upload.service.ts  validate.service.ts  validation.service.ts  window.service.ts
src/utils/: clipboard.utils.ts  file-icon.utils.ts  file.utils.ts  format.utils.ts  http.utils.ts  open-explorer.utils.ts  overflow.utils.ts  startPage.utils.ts  theme.utils.ts
(+259 files in other folders)
