[package]
name = "mdeditor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mdeditor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"  # для работы с конфигурационными директориями
lazy_static = "1.4"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
blocking = "*"
chrono = "0.4.38"
tauri-plugin-store = "2"
tauri-plugin-opener = "2.2.6"

zip = "2.2.3"
rusqlite = { version = "0.35.0", features = ["bundled"] }
winapi = { version = "0.3", features = ["wincrypt", "dpapi", "winbase", "errhandlingapi"] }
tempfile = "3.10"
base64 = "0.22"
rand = "0.8.5"
image = "0.25.6"
pbkdf2 = "0.12"
aes-gcm = "0.10"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"



